--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ axum = "0.6.18"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 tower = "0.4.13"
+rand = "0.8.5"
+twox-hash = "1.6.3"
 
 migration = { path = "migration" } # depends on your needs
 
